- Only show carwashes with the last 14 days - Style fix on mobile for User Info page - Reset scroll position to top on Router change

--- a/src/Components/UserInformation/styles.scss
+++ b/src/Components/UserInformation/styles.scss
@@ -22,6 +22,11 @@ $ns: '.user-information';
 
   &__item {
     padding: 15px 0 0 0 !important;
+    justify-content: center;
+
+    @media screen and (min-width: 480px) {
+      justify-content: flex-start;
+    }
 
     h6 {
       margin-right: 15px;
@@ -35,6 +40,15 @@ $ns: '.user-information';
   &__input {
     outline: none;
     padding-left: 5px;
+  }
+
+  &__button {
+    margin: 0 auto !important;
+    display: block !important;
+
+    @media screen and (min-width: 480px) {
+      margin: 0 !important;
+    }
   }
 
   ::placeholder {
